--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Find Your Rhymes</title>
+    <title>NRC Rhymer</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Satisfy" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 <body>
     <div class="main-container">
       <section class="header">
-        <h1>Find Your Rhymes</h1>
+        <h1>NewRapCity RhymeFinder</h1>
 
         <form action="#" method="post">
           <input id="userInput" type="text" placeholder="Enter a Word to Find Rhymes" >
